syntax = "proto3";

option csharp_namespace = "GrpcServer";

package product;


service ProductHandler { 
  rpc GetProducts (GetProductsRequests) returns (GetProductsReply);

}


message GetProductsRequests {
}

message Product{
	int32 id= 1;
	string name = 2;
	double price =3;
}

message GetProductsReply {
  repeated Product products = 1;
}

